I added a file reader for true.csv and fake.csv

--- a/FakeOrReal.ipynb
+++ b/FakeOrReal.ipynb
@@ -30,12 +30,40 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "from pathlib import Path\n",
+    "\n",
     "import numpy as np\n",
     "\n",
     "import nltk\n",
     "nltk.download('punkt')\n",
     "nltk.download('stopwords')\n",
     "nltk.download('punkt_tab')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd2697c6",
+   "metadata": {},
+   "source": [
+    "For this project, we are using two .csv files: fake.csv and true.csv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b20c5791",
+   "metadata": {
+    "vscode": {
+     "languageId": "plaintext"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "fake_df = pd.read_csv(Path(\"Dataset\") / \"Fake.csv\")\n",
+    "true_df = pd.read_csv(Path(\"Dataset\") / \"True.csv\")\n",
+    "\n",
+    "display(fake_df.head())\n",
+    "display(true_df.head())"
    ]
   }
  ],
