Updated NLTK package downloads and added statistical testing for lexical diversity in fake news detection analysis

--- a/FakeOrReal.ipynb
+++ b/FakeOrReal.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "b6f1ef1d",
    "metadata": {},
    "outputs": [
@@ -28,24 +28,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Error loading punkt: <urlopen error [SSL:\n",
-      "[nltk_data]     CERTIFICATE_VERIFY_FAILED] certificate verify failed:\n",
-      "[nltk_data]     unable to get local issuer certificate (_ssl.c:1028)>\n",
-      "[nltk_data] Error loading stopwords: <urlopen error [SSL:\n",
-      "[nltk_data]     CERTIFICATE_VERIFY_FAILED] certificate verify failed:\n",
-      "[nltk_data]     unable to get local issuer certificate (_ssl.c:1028)>\n",
-      "[nltk_data] Error loading punkt_tab: <urlopen error [SSL:\n",
-      "[nltk_data]     CERTIFICATE_VERIFY_FAILED] certificate verify failed:\n",
-      "[nltk_data]     unable to get local issuer certificate (_ssl.c:1028)>\n"
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     /Users/ninaelmoyan/nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n",
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     /Users/ninaelmoyan/nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
+      "[nltk_data] Downloading package punkt_tab to\n",
+      "[nltk_data]     /Users/ninaelmoyan/nltk_data...\n",
+      "[nltk_data]   Package punkt_tab is already up-to-date!\n",
+      "[nltk_data] Downloading package vader_lexicon to\n",
+      "[nltk_data]     /Users/ninaelmoyan/nltk_data...\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "False"
+       "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -59,7 +61,8 @@
     "import nltk\n",
     "nltk.download('punkt')\n",
     "nltk.download('stopwords')\n",
-    "nltk.download('punkt_tab')"
+    "nltk.download('punkt_tab')\n",
+    "nltk.download('vader_lexicon')"
    ]
   },
   {
@@ -72,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "b20c5791",
    "metadata": {},
    "outputs": [
@@ -281,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "58604e7e",
    "metadata": {},
    "outputs": [
@@ -491,6 +494,303 @@
     "display(df_fake.head())\n",
     "display(df_true.head())"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad53a55d",
+   "metadata": {},
+   "source": [
+    "Next Steps: do correlation analysis to test whether we should keep the date column or not"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9fca1446",
+   "metadata": {},
+   "source": [
+    "Identifiers of Fake News: (Nina)\n",
+    "\n",
+    "<ol>\n",
+    "<li> Number of words: Fake news has fewer words on average than real news </li>\n",
+    "<li> Question marks: Fake news has more question marks </li>\n",
+    "<li> Mood / Negativity of text: Fake news is more negative </li>\n",
+    "<li> Opposition words: True texts contain more objections and oppositions </li>\n",
+    "<li> Pronouns: (\"you\", \"they\") of true news vs. (\"I\" and \"we\") of fake news </li>\n",
+    "<li> Lexical Diversity: more lexical diversity in real news than in fake news</li>\n",
+    "</ol>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6c32d072",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average words in fake news: 470.04\n",
+      "Average words in true news: 435.25\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1. Testing number of words - confirmed !\n",
+    "\n",
+    "df_fake['word_count'] = df_fake['text'].apply(lambda x: len(nltk.word_tokenize(x)))\n",
+    "df_true['word_count'] = df_true['text'].apply(lambda x: len(nltk.word_tokenize(x)))\n",
+    "\n",
+    "avg_fake_words = df_fake['word_count'].mean()\n",
+    "avg_true_words = df_true['word_count'].mean()\n",
+    "\n",
+    "print(f\"Average words in fake news: {avg_fake_words:.2f}\")\n",
+    "print(f\"Average words in true news: {avg_true_words:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d42dd188",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average question marks in fake news: 1.21\n",
+      "Average question marks in true news: 0.10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2. Testing question marks - confirmed !\n",
+    "df_fake['question_marks'] = df_fake['text'].apply(lambda x: x.count('?'))\n",
+    "df_true['question_marks'] = df_true['text'].apply(lambda x: x.count('?'))\n",
+    "\n",
+    "avg_fake_qm = df_fake['question_marks'].mean()\n",
+    "avg_true_qm = df_true['question_marks'].mean()\n",
+    "\n",
+    "print(f\"Average question marks in fake news: {avg_fake_qm:.2f}\")\n",
+    "print(f\"Average question marks in true news: {avg_true_qm:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "62875d9f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average negativity in fake news: 0.09\n",
+      "Average negativity in true news: 0.08\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3. Testing mood / negativity of text\n",
+    "\n",
+    "from nltk.sentiment import SentimentIntensityAnalyzer\n",
+    "sia = SentimentIntensityAnalyzer()\n",
+    "df_fake['negativity'] = df_fake['text'].apply(lambda x: sia.polarity_scores(x)['neg'])\n",
+    "df_true['negativity'] = df_true['text'].apply(lambda x: sia.polarity_scores(x)['neg'])\n",
+    "\n",
+    "avg_fake_neg = df_fake['negativity'].mean()\n",
+    "avg_true_neg = df_true['negativity'].mean()\n",
+    "\n",
+    "print(f\"Average negativity in fake news: {avg_fake_neg:.2f}\")\n",
+    "print(f\"Average negativity in true news: {avg_true_neg:.2f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a4e20ec",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average opposition words in fake news: 2.09\n",
+      "Average opposition words in true news: 1.79\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 4. Testing opposition words - not confirmed\n",
+    "\n",
+    "opposition_words = {'but', 'however', 'although', 'though', 'yet', 'nevertheless', 'nonetheless', 'despite', 'instead'}\n",
+    "df_fake['opposition_count'] = df_fake['text'].apply(lambda x: sum(1 for word in nltk.word_tokenize(x.lower()) if word in opposition_words))\n",
+    "df_true['opposition_count'] = df_true['text'].apply(lambda x: sum(1 for word in nltk.word_tokenize(x.lower()) if word in opposition_words))\n",
+    "\n",
+    "avg_fake_opp = df_fake['opposition_count'].mean()\n",
+    "avg_true_opp = df_true['opposition_count'].mean()\n",
+    "\n",
+    "print(f\"Average opposition words in fake news: {avg_fake_opp:.2f}\")\n",
+    "print(f\"Average opposition words in true news: {avg_true_opp:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "e502d7f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average first-person pronouns in fake news: 5.63\n",
+      "Average second/third-person pronouns in fake news: 14.99\n",
+      "------------------------------\n",
+      "Average first-person pronouns in true news: 2.52\n",
+      "Average second/third-person pronouns in true news: 9.20\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5. Testing pronouns: (\"you\", \"they\") of true news vs. (\"I\" and \"we\") of fake news\n",
+    "\n",
+    "first_person_pronouns = {'i', 'we', 'me', 'us', 'my', 'our', 'mine', 'ours'}\n",
+    "second_third_person_pronouns = {'you', 'he', 'she', 'they', 'him', 'her', 'them', 'your', 'his', 'its', 'their', 'yours', 'theirs'}\n",
+    "\n",
+    "def count_pronouns(text):\n",
+    "    first_person_count = 0\n",
+    "    second_third_person_count = 0\n",
+    "    words = nltk.word_tokenize(str(text).lower())\n",
+    "    for word in words:\n",
+    "        if word in first_person_pronouns:\n",
+    "            first_person_count += 1\n",
+    "        elif word in second_third_person_pronouns:\n",
+    "            second_third_person_count += 1\n",
+    "    return pd.Series([first_person_count, second_third_person_count])\n",
+    "\n",
+    "df_fake[['first_person_count', 'second_third_person_count']] = df_fake['text'].apply(count_pronouns)\n",
+    "df_true[['first_person_count', 'second_third_person_count']] = df_true['text'].apply(count_pronouns)\n",
+    "\n",
+    "avg_fake_fp = df_fake['first_person_count'].mean()\n",
+    "avg_fake_stp = df_fake['second_third_person_count'].mean()\n",
+    "\n",
+    "avg_true_fp = df_true['first_person_count'].mean()\n",
+    "avg_true_stp = df_true['second_third_person_count'].mean()\n",
+    "\n",
+    "print(f\"Average first-person pronouns in fake news: {avg_fake_fp:.2f}\")\n",
+    "print(f\"Average second/third-person pronouns in fake news: {avg_fake_stp:.2f}\")\n",
+    "print(\"-\" * 30)\n",
+    "print(f\"Average first-person pronouns in true news: {avg_true_fp:.2f}\")\n",
+    "print(f\"Average second/third-person pronouns in true news: {avg_true_stp:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d385a8ba",
+   "metadata": {},
+   "source": [
+    "--> Room for analysis: Why are there more pronouns in fake news? Because it is less specific"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "41420abe",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Average lexical diversity in fake news: 0.56\n",
+      "Average lexical diversity in true news: 0.58\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6. Testing lexical diversity\n",
+    "\n",
+    "def lexical_diversity_optimized(text):\n",
+    "    \"\"\"\n",
+    "    Calculates lexical diversity, focusing only on alphabetic words.\n",
+    "    This provides a more accurate measure of vocabulary richness by ignoring punctuation.\n",
+    "    \"\"\"\n",
+    "    # 1. Tokenize and convert to lower case\n",
+    "    tokens = nltk.word_tokenize(str(text).lower())\n",
+    "    \n",
+    "    # 2. OPTIMIZATION: Filter for alphabetic words only\n",
+    "    words = [word for word in tokens if word.isalpha()]\n",
+    "    \n",
+    "    # 3. Handle the edge case of no words being found\n",
+    "    if len(words) == 0:\n",
+    "        return 0\n",
+    "        \n",
+    "    # 4. Calculate diversity using the cleaned word list\n",
+    "    unique_words_count = len(set(words))\n",
+    "    total_words_count = len(words)\n",
+    "    \n",
+    "    return unique_words_count / total_words_count\n",
+    "\n",
+    "# --- Apply the optimized function to your DataFrames ---\n",
+    "df_fake['lexical_diversity'] = df_fake['text'].apply(lexical_diversity_optimized)\n",
+    "df_true['lexical_diversity'] = df_true['text'].apply(lexical_diversity_optimized)\n",
+    "\n",
+    "# --- Calculate and print the results ---\n",
+    "avg_fake_lex_div = df_fake['lexical_diversity'].mean()\n",
+    "avg_true_lex_div = df_true['lexical_diversity'].mean()\n",
+    "\n",
+    "print(f\"Average lexical diversity in fake news: {avg_fake_lex_div:.2f}\")\n",
+    "print(f\"Average lexical diversity in true news: {avg_true_lex_div:.2f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "27802ea4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T-statistic: -21.3468\n",
+      "P-value: 0.0000\n",
+      "\n",
+      "The difference is statistically significant.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# --- Statistical Testing for Lexical Diversity --- I used Gemini 2.5 code to test it out to see if the difference from above is significant\n",
+    "\n",
+    "\n",
+    "from scipy import stats\n",
+    "\n",
+    "# Ensure there are no missing values in the columns being tested\n",
+    "lex_div_fake = df_fake['lexical_diversity'].dropna()\n",
+    "lex_div_true = df_true['lexical_diversity'].dropna()\n",
+    "\n",
+    "# Perform the independent t-test\n",
+    "t_statistic, p_value = stats.ttest_ind(lex_div_fake, lex_div_true)\n",
+    "\n",
+    "print(f\"T-statistic: {t_statistic:.4f}\")\n",
+    "print(f\"P-value: {p_value:.4f}\")\n",
+    "\n",
+    "# Interpret the result\n",
+    "if p_value < 0.05:\n",
+    "    print(\"\\nThe difference is statistically significant.\")\n",
+    "else:\n",
+    "    print(\"\\nThe difference is not statistically significant.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34219df6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
