I created a new notebook for logistic regression !

--- a/FakeOrReal.ipynb
+++ b/FakeOrReal.ipynb
@@ -527,6 +527,7 @@
     "<li> Pronouns: (\"you\", \"they\") of true news vs. (\"I\" and \"we\") of fake news </li>\n",
     "<li> Lexical Diversity: more lexical diversity in real news than in fake news</li>\n",
     "<li> Profanity: fake news is more likely to feature profane words than real news</li>\n",
+    "<li> Punctuation in title: Fake news features more exclaimation points and question marks than real news </li>\n",
     "</ol>"
    ]
   },
@@ -587,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "id": "62875d9f",
    "metadata": {},
    "outputs": [
@@ -620,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "6a4e20ec",
    "metadata": {},
    "outputs": [
@@ -654,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "345c7eb6",
    "metadata": {},
    "outputs": [
@@ -675,7 +676,7 @@
        "Name: text, Length: 23481, dtype: object"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "e502d7f4",
    "metadata": {},
    "outputs": [
@@ -762,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "41420abe",
    "metadata": {},
    "outputs": [
@@ -773,7 +774,8 @@
       "Average lexical diversity in fake news: 0.56\n",
       "Average lexical diversity in true news: 0.58\n",
       "Median lexical diversity in fake news: 0.55\n",
-      "Median lexical diversity in true news: 0.56\n"
+      "Median lexical diversity in true news: 0.56\n",
+      "There is mild difference that is sigificant.\n"
      ]
     }
    ],
@@ -826,7 +828,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "id": "69ade27e",
+   "metadata": {
+    "vscode": {
+     "languageId": "ruby"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========================================\n",
+      "      Title Punctuation Analysis\n",
+      "========================================\n",
+      "Average '!' in fake titles: 0.15\n",
+      "Average '!' in true titles: 0.00\n",
+      "------------------------------\n",
+      "Average '?' in fake titles: 0.07\n",
+      "Average '?' in true titles: 0.01\n",
+      "========================================\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 8. Testing punctuation in title (Separating ! and ?)\n",
+    "\n",
+    "# Count Exclamation Points (!)\n",
+    "df_fake['title_exclamation'] = df_fake['title'].str.count('!')\n",
+    "df_true['title_exclamation'] = df_true['title'].str.count('!')\n",
+    "\n",
+    "# Count Question Marks (?) \n",
+    "# Note: We use '\\?' because ? is a special character in regex, so it must be escaped\n",
+    "df_fake['title_question'] = df_fake['title'].str.count(r'\\?')\n",
+    "df_true['title_question'] = df_true['title'].str.count(r'\\?')\n",
+    "\n",
+    "# Calculate Averages\n",
+    "avg_fake_excl = df_fake['title_exclamation'].mean()\n",
+    "avg_true_excl = df_true['title_exclamation'].mean()\n",
+    "\n",
+    "avg_fake_ques = df_fake['title_question'].mean()\n",
+    "avg_true_ques = df_true['title_question'].mean()\n",
+    "\n",
+    "# Print Results\n",
+    "print(\"=\"*40)\n",
+    "print(\"      Title Punctuation Analysis\")\n",
+    "print(\"=\"*40)\n",
+    "print(f\"Average '!' in fake titles: {avg_fake_excl:.2f}\")\n",
+    "print(f\"Average '!' in true titles: {avg_true_excl:.2f}\")\n",
+    "print(\"-\" * 30)\n",
+    "print(f\"Average '?' in fake titles: {avg_fake_ques:.2f}\")\n",
+    "print(f\"Average '?' in true titles: {avg_true_ques:.2f}\")\n",
+    "print(\"=\"*40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "27802ea4",
    "metadata": {},
    "outputs": [
@@ -869,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "b5c369db",
    "metadata": {},
    "outputs": [
@@ -879,7 +938,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -902,7 +961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "34219df6",
    "metadata": {},
    "outputs": [
@@ -1001,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "3a6c3598",
    "metadata": {},
    "outputs": [
@@ -1036,9 +1095,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/nz/dx13jqsj38z49vg6zl5q7l500000gn/T/ipykernel_11713/1452919445.py:36: FutureWarning: 'M' is deprecated and will be removed in a future version, please use 'ME' instead.\n",
+      "/var/folders/nz/dx13jqsj38z49vg6zl5q7l500000gn/T/ipykernel_67346/1452919445.py:36: FutureWarning: 'M' is deprecated and will be removed in a future version, please use 'ME' instead.\n",
       "  fake_counts_by_month = df_plot[df_plot['is_fake'] == 1]['is_fake'].resample('M').size()\n",
-      "/var/folders/nz/dx13jqsj38z49vg6zl5q7l500000gn/T/ipykernel_11713/1452919445.py:37: FutureWarning: 'M' is deprecated and will be removed in a future version, please use 'ME' instead.\n",
+      "/var/folders/nz/dx13jqsj38z49vg6zl5q7l500000gn/T/ipykernel_67346/1452919445.py:37: FutureWarning: 'M' is deprecated and will be removed in a future version, please use 'ME' instead.\n",
       "  true_counts_by_month = df_plot[df_plot['is_fake'] == 0]['is_fake'].resample('M').size()\n"
      ]
     },
@@ -1049,7 +1108,7 @@
      "traceback": [
       "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
       "\u001b[31mValueError\u001b[39m                                Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[20]\u001b[39m\u001b[32m, line 42\u001b[39m\n\u001b[32m     40\u001b[39m plt.figure(figsize=(\u001b[32m15\u001b[39m, \u001b[32m7\u001b[39m))\n\u001b[32m     41\u001b[39m fake_counts_by_month.plot(label=\u001b[33m'\u001b[39m\u001b[33mFake News\u001b[39m\u001b[33m'\u001b[39m, color=\u001b[33m'\u001b[39m\u001b[33mred\u001b[39m\u001b[33m'\u001b[39m, marker=\u001b[33m'\u001b[39m\u001b[33mo\u001b[39m\u001b[33m'\u001b[39m, linestyle=\u001b[33m'\u001b[39m\u001b[33m--\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m42\u001b[39m \u001b[43mtrue_counts_by_month\u001b[49m\u001b[43m.\u001b[49m\u001b[43mplot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlabel\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mTrue News\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolor\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mblue\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmarker\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mo\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlinestyle\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m-\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     44\u001b[39m plt.title(\u001b[33m'\u001b[39m\u001b[33mArticle Publication Trends Over Time\u001b[39m\u001b[33m'\u001b[39m, fontsize=\u001b[32m16\u001b[39m)\n\u001b[32m     45\u001b[39m plt.ylabel(\u001b[33m'\u001b[39m\u001b[33mNumber of Articles Published\u001b[39m\u001b[33m'\u001b[39m, fontsize=\u001b[32m12\u001b[39m)\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[16]\u001b[39m\u001b[32m, line 42\u001b[39m\n\u001b[32m     40\u001b[39m plt.figure(figsize=(\u001b[32m15\u001b[39m, \u001b[32m7\u001b[39m))\n\u001b[32m     41\u001b[39m fake_counts_by_month.plot(label=\u001b[33m'\u001b[39m\u001b[33mFake News\u001b[39m\u001b[33m'\u001b[39m, color=\u001b[33m'\u001b[39m\u001b[33mred\u001b[39m\u001b[33m'\u001b[39m, marker=\u001b[33m'\u001b[39m\u001b[33mo\u001b[39m\u001b[33m'\u001b[39m, linestyle=\u001b[33m'\u001b[39m\u001b[33m--\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m42\u001b[39m \u001b[43mtrue_counts_by_month\u001b[49m\u001b[43m.\u001b[49m\u001b[43mplot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mlabel\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mTrue News\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcolor\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mblue\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmarker\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mo\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlinestyle\u001b[49m\u001b[43m=\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43m-\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[32m     44\u001b[39m plt.title(\u001b[33m'\u001b[39m\u001b[33mArticle Publication Trends Over Time\u001b[39m\u001b[33m'\u001b[39m, fontsize=\u001b[32m16\u001b[39m)\n\u001b[32m     45\u001b[39m plt.ylabel(\u001b[33m'\u001b[39m\u001b[33mNumber of Articles Published\u001b[39m\u001b[33m'\u001b[39m, fontsize=\u001b[32m12\u001b[39m)\n",
       "\u001b[36mFile \u001b[39m\u001b[32m~/fakeornah/.venv/lib/python3.13/site-packages/pandas/plotting/_core.py:1030\u001b[39m, in \u001b[36mPlotAccessor.__call__\u001b[39m\u001b[34m(self, *args, **kwargs)\u001b[39m\n\u001b[32m   1027\u001b[39m             label_name = label_kw \u001b[38;5;129;01mor\u001b[39;00m data.columns\n\u001b[32m   1028\u001b[39m             data.columns = label_name\n\u001b[32m-> \u001b[39m\u001b[32m1030\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mplot_backend\u001b[49m\u001b[43m.\u001b[49m\u001b[43mplot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkind\u001b[49m\u001b[43m=\u001b[49m\u001b[43mkind\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
       "\u001b[36mFile \u001b[39m\u001b[32m~/fakeornah/.venv/lib/python3.13/site-packages/pandas/plotting/_matplotlib/__init__.py:71\u001b[39m, in \u001b[36mplot\u001b[39m\u001b[34m(data, kind, **kwargs)\u001b[39m\n\u001b[32m     69\u001b[39m         kwargs[\u001b[33m\"\u001b[39m\u001b[33max\u001b[39m\u001b[33m\"\u001b[39m] = \u001b[38;5;28mgetattr\u001b[39m(ax, \u001b[33m\"\u001b[39m\u001b[33mleft_ax\u001b[39m\u001b[33m\"\u001b[39m, ax)\n\u001b[32m     70\u001b[39m plot_obj = PLOT_CLASSES[kind](data, **kwargs)\n\u001b[32m---> \u001b[39m\u001b[32m71\u001b[39m \u001b[43mplot_obj\u001b[49m\u001b[43m.\u001b[49m\u001b[43mgenerate\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     72\u001b[39m plot_obj.draw()\n\u001b[32m     73\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m plot_obj.result\n",
       "\u001b[36mFile \u001b[39m\u001b[32m~/fakeornah/.venv/lib/python3.13/site-packages/pandas/plotting/_matplotlib/core.py:501\u001b[39m, in \u001b[36mMPLPlot.generate\u001b[39m\u001b[34m(self)\u001b[39m\n\u001b[32m    499\u001b[39m \u001b[38;5;28mself\u001b[39m._compute_plot_data()\n\u001b[32m    500\u001b[39m fig = \u001b[38;5;28mself\u001b[39m.fig\n\u001b[32m--> \u001b[39m\u001b[32m501\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_make_plot\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfig\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m    502\u001b[39m \u001b[38;5;28mself\u001b[39m._add_table()\n\u001b[32m    503\u001b[39m \u001b[38;5;28mself\u001b[39m._make_legend()\n",
